--- a/style.scss
+++ b/style.scss
@@ -24,3 +24,28 @@ $border: 0.2rem solid $black;
     grid-template-columns: repeat(auto-fit, minmax($val, 1fr));
     gap: 1.5rem;
 }
+
+
+html{
+    font-size: 62.5%;
+    overflow-x: hidden;
+}
+.header{
+    position: sticky;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background: $white;
+    box-shadow:0 0.5rem 1rem rgba(0,0,0,0.1);
+    display: flex;
+    align-items: center;
+    padding: 0 9%;
+
+    .logo{
+        font-size: 2.5rem;
+        color: $black;
+        font-weight: bolder;
+        margin-right: auto;
+    }
+}
