--- a/style.css
+++ b/style.css
@@ -63,5 +63,20 @@ html {
 .header .navbar ul li ul li {
   width: 100%;
 }
+.header .icons div,
+.header .icons a {
+  font-size: 2.5rem;
+  color: #333;
+  cursor: pointer;
+  margin-left: 2rem;
+}
+.header .icons div:hover,
+.header .icons a:hover {
+  color: #e84393;
+}
+
+#menu-btn {
+  display: none;
+}
 
 /*# sourceMappingURL=style.css.map */
