--- a/style.css
+++ b/style.css
@@ -74,6 +74,38 @@ html {
 .header .icons a:hover {
   color: #e84393;
 }
+.header .search-form {
+  position: absolute;
+  top: 99%;
+  right: 0;
+  left: 0;
+  border-top: 0.2rem solid #333;
+  background: #fff;
+  height: 6rem;
+  display: flex;
+  align-items: center;
+  padding: 2rem;
+  clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+}
+.header .search-form.active {
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+}
+.header .search-form input {
+  width: 100%;
+  height: 100%;
+  padding-right: 1rem;
+  font-size: 1.7rem;
+  color: #666;
+  text-transform: none;
+}
+.header .search-form label {
+  font-size: 2.5rem;
+  color: #333;
+  cursor: pointer;
+}
+.header .search-form label:hover {
+  color: #e84393;
+}
 
 #menu-btn {
   display: none;
