--- a/style.scss
+++ b/style.scss
@@ -26,60 +26,61 @@ $border: 0.2rem solid $black;
 }
 
 
-html{
+html {
     font-size: 62.5%;
     overflow-x: hidden;
 }
-.header{
+
+.header {
     position: sticky;
     top: 0;
     left: 0;
     right: 0;
     z-index: 1000;
     background: $white;
-    box-shadow:0 0.5rem 1rem rgba(0,0,0,0.1);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     padding: 0 9%;
 
-    .logo{
+    .logo {
         font-size: 2.5rem;
         color: $black;
         font-weight: bolder;
         margin-right: auto;
     }
 
-    .navbar{
-        ul{
+    .navbar {
+        ul {
             list-style: none;
 
-            li{
+            li {
                 position: relative;
                 float: left;
 
-                &:hover ul{
-                 display: block;
+                &:hover ul {
+                    display: block;
                 }
 
-                a{
+                a {
                     font-size: 1.7rem;
                     padding: 2rem;
                     color: $light-color;
                     display: block;
 
-                    &:hover{
+                    &:hover {
                         background: $light-bg;
                     }
                 }
 
-                ul{
+                ul {
                     position: absolute;
                     left: 0;
                     width: 20rem;
                     background: $white;
                     display: none;
 
-                    li{
+                    li {
                         width: 100%;
                     }
                 }
@@ -88,18 +89,55 @@ html{
     }
 
     .icons div,
-    .icons a{
-      font-size: 2.5rem;
-      color: $black;
-      cursor: pointer;
-      margin-left: 2rem;
+    .icons a {
+        font-size: 2.5rem;
+        color: $black;
+        cursor: pointer;
+        margin-left: 2rem;
 
-      &:hover{
-        color: $pink;
-      }
+        &:hover {
+            color: $pink;
+        }
+    }
+
+    .search-form {
+        position: absolute;
+        top: 99%;
+        right: 0;
+        left: 0;
+        border-top: $border;
+        background: $white;
+        height: 6rem;
+        display: flex;
+        align-items: center;
+        padding: 2rem;
+        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+
+        &.active {
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+        }
+
+        input {
+            width: 100%;
+            height: 100%;
+            padding-right: 1rem;
+            font-size: 1.7rem;
+            color: $light-color;
+            text-transform: none;
+        }
+
+        label {
+            font-size: 2.5rem;
+            color: $black;
+            cursor: pointer;
+
+            &:hover {
+                color: $pink;
+            }
+        }
     }
 }
 
-#menu-btn{
+#menu-btn {
     display: none;
 }
