--- a/style.scss
+++ b/style.scss
@@ -12,6 +12,10 @@
     text-decoration: none;
 }
 
+section {
+    padding: 2rem 9%;
+}
+
 $pink: #e84393;
 $black: #333;
 $white: #fff;
@@ -25,6 +29,22 @@ $border: 0.2rem solid $black;
     gap: 1.5rem;
 }
 
+.btn {
+    display: inline-block;
+    margin-top: 1rem;
+    padding: 0.8rem 2.8rem;
+    font-size: 1.7rem;
+    color: $black;
+    border: $border;
+    background: none;
+    cursor: pointer;
+    border-radius: 0.5rem;
+
+    &:hover{
+        background: $black;
+        color: $white;
+    }
+}
 
 html {
     font-size: 62.5%;
@@ -162,56 +182,111 @@ html {
 
 
 
+.footer {
+    .box-container {
+        @include grid(25rem);
 
+        .box {
+            h3 {
+                font-size: 2.2rem;
+                color: $black;
+                padding: 1rem 0;
+            }
+
+            a {
+                display: block;
+                font-size: 1.4rem;
+                color: $light-color;
+                padding: 1rem 0;
+
+                &:hover {
+                    color: $pink;
+
+                    i {
+                        padding-right: 1rem;
+                    }
+                }
+
+                i {
+                    color: $pink;
+                    padding-right: 0.5rem;
+                }
+            }
+
+            p {
+                font-size: 1.5rem;
+                color: $light-color;
+                margin-bottom: 1rem;
+            }
+
+            form input[type="email"] {
+                width: 100%;
+                padding: 1rem 1.2rem;
+                border-radius: 0.5rem;
+                background: $light-bg;
+                font-size: 1.6rem;
+                text-transform: none;
+                margin: 0.5rem 0;
+            }
+        }
+    }
+}
 
 
 
 /* media queries */
-@media(max-width:1200px){
-    html{
+@media(max-width:1200px) {
+    html {
         font-size: 55%;
     }
-    .header{
+
+    .header {
         padding: 0 2rem;
+    }
+
+    section {
+        padding: 2rem;
     }
 }
 
-@media(max-width:768px){
- #menu-btn{
-    display: inline-block;
- }
- .header{
-    padding: 2rem;
+@media(max-width:768px) {
+    #menu-btn {
+        display: inline-block;
+    }
 
-    .navbar{
-        position: absolute;
-        top: 99%;
-        right: 0;
-        left: 0;
-        background: $white;
-         clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+    .header {
+        padding: 2rem;
 
-        &.active {
-            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-        }
+        .navbar {
+            position: absolute;
+            top: 99%;
+            right: 0;
+            left: 0;
+            background: $white;
+            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
 
-        ul li{
-            width: 100%;
-            
-            ul{
-                position: relative;
+            &.active {
+                clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+            }
+
+            ul li {
                 width: 100%;
-                li a{
-                    padding-left: 4rem;
+
+                ul {
+                    position: relative;
+                    width: 100%;
+
+                    li a {
+                        padding-left: 4rem;
+                    }
                 }
             }
         }
     }
- }
 }
 
-@media(max-width:450px){
-    html{
+@media(max-width:450px) {
+    html {
         font-size: 50%;
     }
 }
