--- a/style.css
+++ b/style.css
@@ -142,7 +142,25 @@ html {
   background-size: cover !important;
   background-position: center !important;
   display: flex;
+  justify-content: start;
   align-items: center;
+}
+.home .slide .content span {
+  color: #fff;
+  display: block;
+  font-size: 2rem;
+  animation: fadeIn 0.4s linear 0.2s backwards;
+}
+.home .slide .content h3 {
+  color: #fff;
+  display: block;
+  font-size: 6rem;
+  text-transform: uppercase;
+  padding: 1rem 0;
+  animation: fadeIn 0.4s linear 0.4s backwards;
+}
+.home .slide .content .btn {
+  animation: fadeIn 0.4s linear 0.6s backwards;
 }
 
 .footer .box-container {
