--- a/style.css
+++ b/style.css
@@ -131,6 +131,16 @@ html {
   display: none;
 }
 
+@keyframes fadeIn {
+  0% {
+    transform: translateY(-3rem);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
 .home {
   padding: 0;
   position: relative;
@@ -144,6 +154,10 @@ html {
   display: flex;
   justify-content: start;
   align-items: center;
+  display: none;
+}
+.home .slide.active {
+  display: flex;
 }
 .home .slide .content span {
   color: #fff;
@@ -161,6 +175,8 @@ html {
 }
 .home .slide .content .btn {
   animation: fadeIn 0.4s linear 0.6s backwards;
+  color: #fff;
+  border: 0.2rem solid white;
 }
 
 .footer .box-container {
