--- a/style.scss
+++ b/style.scss
@@ -220,6 +220,30 @@ html {
 
         }
     }
+
+    #next-slide,#prev-slide{
+       position: absolute;
+       bottom: 2rem;
+       right: 2rem;
+       height: 6rem;
+       width: 6rem;
+       line-height: 6rem;
+       font-size: 4rem;
+       color: $black;
+       border: $border;
+       background: $white;
+       border-radius: 0.5rem;
+       cursor: pointer;
+       text-align: center;
+
+       &:hover{
+        background: $black;
+        color: $white
+       }
+    }
+    #prev-slide{
+        right: 9rem;
+    }
 }
 
 
