--- a/style.css
+++ b/style.css
@@ -201,6 +201,50 @@ html {
   right: 9rem;
 }
 
+.banner {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
+  gap: 1.5rem;
+}
+.banner .box {
+  position: relative;
+  height: 30rem;
+  overflow: hidden;
+  border-radius: 0.5rem;
+}
+.banner .box:hover img {
+  transform: scale(1.1);
+}
+.banner .box img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.banner .box .content {
+  position: absolute;
+  top: 50%;
+  right: 2rem;
+  transform: translateY(-50%);
+}
+.banner .box .content span {
+  font-size: 1.5rem;
+  color: #fff;
+}
+.banner .box .content h3 {
+  font-size: 2rem;
+  color: #fff;
+  padding-top: 1rem;
+}
+.banner .box .content .btn {
+  padding: 0.6rem 2rem;
+  color: #fff;
+  font-size: 1.5rem;
+  border: 0.2rem solid white;
+}
+.banner .box .content .btn:hover {
+  background: rgba(0, 0, 0, 0.5);
+}
+
 .footer .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
