--- a/style.scss
+++ b/style.scss
@@ -245,6 +245,48 @@ html {
         right: 9rem;
     }
 }
+.banner{
+    @include grid(31rem);
+    .box{
+        position: relative;
+        height: 30rem;
+        overflow: hidden;
+        border-radius: 0.5rem;
+
+        &:hover img{
+            transform: scale(1.1);
+        }
+        img{
+          width: 100%;
+          height: 100%;
+          object-fit: cover
+        }
+        .content{
+            position: absolute;
+            top: 50%;
+            right: 2rem;
+            transform: translateY(-50%);
+            span{
+                font-size: 1.5rem;
+                color: $white;
+            }
+            h3{
+                font-size: 2rem;
+                color: $white;
+                padding-top: 1rem;
+            }
+             .btn {
+                padding: 0.6rem 2rem;
+                color: $white;
+                font-size: 1.5rem;
+                border: 0.2rem solid white;
+                &:hover{
+                    background: rgba(0,0,0,0.5);
+                }
+            }
+        }
+    }
+}
 
 
 
