--- a/style.scss
+++ b/style.scss
@@ -51,6 +51,32 @@ html {
     overflow-x: hidden;
 }
 
+.heading {
+    text-align: center;
+    background: $pink;
+
+    h1 {
+        font-size: 3rem;
+        text-transform: uppercase;
+        color: $white;
+    }
+
+    p {
+        color: $white;
+        padding-top: 0.7rem;
+        font-size: 1.7rem;
+
+        a{
+            color: $white;
+
+            &:hover{
+                color: $black;
+            }
+        }
+    }
+
+}
+
 .header {
     position: sticky;
     top: 0;
@@ -221,67 +247,77 @@ html {
         }
     }
 
-    #next-slide,#prev-slide{
-       position: absolute;
-       bottom: 2rem;
-       right: 2rem;
-       height: 6rem;
-       width: 6rem;
-       line-height: 6rem;
-       font-size: 4rem;
-       color: $black;
-       border: $border;
-       background: $white;
-       border-radius: 0.5rem;
-       cursor: pointer;
-       text-align: center;
+    #next-slide,
+    #prev-slide {
+        position: absolute;
+        bottom: 2rem;
+        right: 2rem;
+        height: 6rem;
+        width: 6rem;
+        line-height: 6rem;
+        font-size: 4rem;
+        color: $black;
+        border: $border;
+        background: $white;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        text-align: center;
 
-       &:hover{
-        background: $black;
-        color: $white
-       }
+        &:hover {
+            background: $black;
+            color: $white
+        }
     }
-    #prev-slide{
+
+    #prev-slide {
         right: 9rem;
     }
 }
-.banner{
+
+.banner {
     @include grid(31rem);
-    .box{
+
+    .box {
         position: relative;
         height: 30rem;
         overflow: hidden;
         border-radius: 0.5rem;
 
-        &:hover img{
+        &:hover img {
             transform: scale(1.1);
         }
-        img{
-          width: 100%;
-          height: 100%;
-          object-fit: cover
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover
         }
-        .content{
+
+        .content {
             position: absolute;
             top: 50%;
             right: 2rem;
             transform: translateY(-50%);
-            span{
+
+            span {
                 font-size: 1.5rem;
                 color: $white;
             }
-            h3{
+
+            h3 {
                 font-size: 2rem;
                 color: $white;
                 padding-top: 1rem;
             }
-             .btn {
+
+            .btn {
                 padding: 0.6rem 2rem;
                 color: $white;
                 font-size: 1.5rem;
                 border: 0.2rem solid white;
-                &:hover{
-                    background: rgba(0,0,0,0.5);
+
+                &:hover {
+                    background: rgba(0, 0, 0, 0.5);
                 }
             }
         }
@@ -428,7 +464,8 @@ html {
     html {
         font-size: 50%;
     }
-    .home .slide .content h3{
+
+    .home .slide .content h3 {
         font-size: 4rem;
     }
 }
