--- a/style.css
+++ b/style.css
@@ -15,6 +15,13 @@ section {
   padding: 2rem 9%;
 }
 
+.title {
+  font-size: 3rem;
+  color: #333;
+  margin-bottom: 2rem;
+  text-align: center;
+}
+
 .btn {
   display: inline-block;
   margin-top: 1rem;
