--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ section {
   color: #333;
   margin-bottom: 2rem;
   text-align: center;
+  padding: 1rem;
 }
 
 .btn {
@@ -273,6 +274,53 @@ html {
 }
 .banner .box .content .btn:hover {
   background: rgba(0, 0, 0, 0.5);
+}
+
+.products .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
+  gap: 1.5rem;
+}
+.products .box-container .box {
+  border-radius: 0.5rem;
+  text-align: center;
+  border: 0.2rem solid #333;
+}
+.products .box-container .box:hover .image .icons {
+  transform: translateY(0);
+}
+.products .box-container .box .image {
+  border-radius: 0.5rem;
+  overflow: hidden;
+  position: relative;
+  height: 25rem;
+  width: 100%;
+}
+.products .box-container .box .image .icons {
+  background: #fff;
+  z-index: 1000;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  border-bottom: 0.2rem solid #333;
+  transform: translateY(-1rem);
+}
+.products .box-container .box .image .icons a {
+  height: 5rem;
+  width: 5rem;
+  line-height: 5rem;
+  font-size: 2rem;
+  color: #333;
+}
+.products .box-container .box .image .icons a:hover {
+  background: #333;
+  color: #fff;
+}
+.products .box-container .box .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .footer .box-container {
