--- a/style.scss
+++ b/style.scss
@@ -31,10 +31,11 @@ section {
 }
 
 .title {
- font-size: 3rem;
- color: $black;
- margin-bottom: 2rem;
- text-align: center;
+    font-size: 3rem;
+    color: $black;
+    margin-bottom: 2rem;
+    text-align: center;
+    padding: 1rem;
 
 }
 
@@ -333,7 +334,57 @@ html {
     }
 }
 
+.products .box-container {
+    @include grid(32rem);
 
+    .box {
+        border-radius: 0.5rem;
+        text-align: center;
+        border: $border;
+
+        &:hover .image .icons{
+            transform: translateY(0);
+        }
+
+        .image{
+            border-radius: 0.5rem;
+            overflow: hidden;
+            position: relative;
+            height: 25rem;
+            width: 100%;
+
+            .icons{
+                background: $white;
+                z-index: 1000;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                border-bottom: $border;
+                transform: translateY(-1rem);
+
+                a{
+                    height: 5rem;
+                    width: 5rem;
+                    line-height: 5rem;
+                    font-size: 2rem;
+                    color: $black;
+                    &:hover{
+                        background: $black;
+                        color: $white;
+                    }
+                }
+            }
+      
+            img{
+                width: 100%;
+                height: 100%;
+                object-fit: cover
+            }
+
+        }
+    }
+}
 
 
 
