--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ html {
   left: 0;
   right: 0;
   border-bottom: 0.2rem solid #333;
-  transform: translateY(-1rem);
+  transform: translateY(-7rem);
 }
 .products .box-container .box .image .icons a {
   height: 5rem;
@@ -321,6 +321,29 @@ html {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+.products .box-container .box .content {
+  padding: 1.5rem 0;
+}
+.products .box-container .box .content h3 {
+  font-size: 2rem;
+  color: #333;
+}
+.products .box-container .box .content .stars {
+  padding: 1rem 0;
+}
+.products .box-container .box .content .stars a {
+  font-size: 1.4rem;
+  color: #e84393;
+}
+.products .box-container .box .content .price {
+  font-size: 2.2rem;
+  color: #333;
+}
+.products .box-container .box .content .price span {
+  font-size: 1.5rem;
+  text-decoration: line-through;
+  color: #666;
 }
 
 .footer .box-container {
