--- a/style.scss
+++ b/style.scss
@@ -361,7 +361,7 @@ html {
                 left: 0;
                 right: 0;
                 border-bottom: $border;
-                transform: translateY(-1rem);
+                transform: translateY(-7rem);
 
                 a{
                     height: 5rem;
@@ -382,6 +382,33 @@ html {
                 object-fit: cover
             }
 
+        }
+
+        .content{
+            padding: 1.5rem 0;
+
+            h3{
+                font-size: 2rem;
+                color: $black;
+            }
+            .stars{
+                padding: 1rem 0;
+                a{
+                    font-size: 1.4rem;
+                    color: $pink;
+                }
+            }
+
+            .price{
+                font-size: 2.2rem;
+                color: $black;
+
+                span{
+                    font-size: 1.5rem;
+                    text-decoration: line-through;
+                    color: $light-color;
+                }
+            }
         }
     }
 }
