--- a/style.css
+++ b/style.css
@@ -346,6 +346,64 @@ html {
   color: #666;
 }
 
+.about .row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.about .row .image {
+  flex: 1 1 42rem;
+}
+.about .row .image img {
+  width: 100%;
+  border-radius: 0.5rem;
+}
+.about .row .content {
+  flex: 1 1 42rem;
+}
+.about .row .content h3 {
+  font-size: 3.5rem;
+  color: #333;
+  line-height: 2;
+}
+.about .row .content p {
+  font-size: 1.4rem;
+  line-height: 2.5;
+  color: #666;
+  padding: 1rem 0;
+}
+.about .icons-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+  gap: 1.5rem;
+  margin-top: 2.5rem;
+}
+.about .icons-container .icons {
+  padding: 3rem 2rem;
+  border-radius: 0.5rem;
+  border: 0.2rem solid #333;
+  text-align: center;
+  cursor: pointer;
+}
+.about .icons-container .icons:hover {
+  background: #333;
+}
+.about .icons-container .icons:hover img {
+  filter: invert(1);
+}
+.about .icons-container .icons:hover p {
+  color: #fff;
+}
+.about .icons-container .icons img {
+  height: 7rem;
+  margin-bottom: 1rem;
+}
+.about .icons-container .icons p {
+  font-size: 1.7rem;
+  color: #333;
+}
+
 .footer .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
