--- a/style.scss
+++ b/style.scss
@@ -413,7 +413,71 @@ html {
     }
 }
 
+.about{
+    .row{
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        gap: 2rem;
 
+        .image{
+           flex: 1 1 42rem;
+           img{
+            width: 100%;
+            border-radius: 0.5rem;
+           }
+        }
+
+        .content{
+            flex: 1 1 42rem;
+
+            h3{
+                font-size: 3.5rem;
+                color: $black;
+                line-height: 2;
+            }
+
+            p{
+                font-size: 1.4rem;
+                line-height: 2.5;
+                color: $light-color;
+                padding: 1rem 0;
+            }
+        }
+    }
+
+    .icons-container{
+        @include grid(16rem);
+        margin-top: 2.5rem;
+
+        .icons{
+            padding: 3rem 2rem;
+            border-radius: 0.5rem;
+            border: $border;
+            text-align: center;
+            cursor: pointer;
+            &:hover{
+                background: $black;
+
+                img{
+                    filter: invert(1);
+                }
+                p{
+                    color: $white;
+                }
+            }
+
+            img{
+                height: 7rem;
+                margin-bottom: 1rem;
+            }
+            p{
+                font-size: 1.7rem;
+                color: $black;
+            }
+        }
+    }
+}
 
 
 
