--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ section {
     color: $black;
     margin-bottom: 2rem;
     text-align: center;
-    padding: 1rem;
+    padding:0 1rem;
 
 }
 
@@ -556,7 +556,38 @@ html {
 
 }
 
+.contact{
+    .row{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2rem;
 
+        form{
+            flex: 1 1 42rem;
+            padding: 2rem;
+            border-radius: 0.5rem;
+            border: $border;
+            .box , textarea{
+                width: 100%;
+                border-bottom: $border;
+                margin-bottom: 1rem;
+                padding: 1rem 0;
+                font-size: 1.6rem;
+                color: $light-color;
+                text-transform: none;
+            }
+            textarea{
+             height: 15rem;
+             resize: none;
+            }
+        }
+        .map{
+            flex: 1 1 42rem;
+            border-radius: 0.5rem;
+            width: 100%;
+        }
+    }
+}
 
 
 
