--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ section {
   color: #333;
   margin-bottom: 2rem;
   text-align: center;
-  padding: 1rem;
+  padding: 0 1rem;
 }
 
 .btn {
@@ -460,6 +460,36 @@ html {
 .blogs .boxes .box .content .icons a i {
   padding-right: 0.5rem;
   color: #e84393;
+}
+
+.contact .row {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+}
+.contact .row form {
+  flex: 1 1 42rem;
+  padding: 2rem;
+  border-radius: 0.5rem;
+  border: 0.2rem solid #333;
+}
+.contact .row form .box, .contact .row form textarea {
+  width: 100%;
+  border-bottom: 0.2rem solid #333;
+  margin-bottom: 1rem;
+  padding: 1rem 0;
+  font-size: 1.6rem;
+  color: #666;
+  text-transform: none;
+}
+.contact .row form textarea {
+  height: 15rem;
+  resize: none;
+}
+.contact .row .map {
+  flex: 1 1 42rem;
+  border-radius: 0.5rem;
+  width: 100%;
 }
 
 .footer .box-container {
