--- a/style.scss
+++ b/style.scss
@@ -35,7 +35,7 @@ section {
     color: $black;
     margin-bottom: 2rem;
     text-align: center;
-    padding:0 1rem;
+    padding: 0 1rem;
 
 }
 
@@ -495,7 +495,7 @@ html {
         border: $border;
         cursor: pointer;
 
-        &:hover .image img{
+        &:hover .image img {
             transform: scale(1.1);
         }
 
@@ -539,11 +539,11 @@ html {
                     font-size: 1.4rem;
                     color: $light-color;
 
-                    &:hover{
+                    &:hover {
                         color: $pink;
                     }
 
-                    i{
+                    i {
                         padding-right: 0.5rem;
                         color: $pink;
                     }
@@ -556,18 +556,20 @@ html {
 
 }
 
-.contact{
-    .row{
+.contact {
+    .row {
         display: flex;
         flex-wrap: wrap;
         gap: 2rem;
 
-        form{
+        form {
             flex: 1 1 42rem;
             padding: 2rem;
             border-radius: 0.5rem;
             border: $border;
-            .box , textarea{
+
+            .box,
+            textarea {
                 width: 100%;
                 border-bottom: $border;
                 margin-bottom: 1rem;
@@ -576,12 +578,14 @@ html {
                 color: $light-color;
                 text-transform: none;
             }
-            textarea{
-             height: 15rem;
-             resize: none;
+
+            textarea {
+                height: 15rem;
+                resize: none;
             }
         }
-        .map{
+
+        .map {
             flex: 1 1 42rem;
             border-radius: 0.5rem;
             width: 100%;
@@ -589,6 +593,81 @@ html {
     }
 }
 
+.login-form,
+.register-form {
+    form {
+        margin: 1rem auto;
+        max-width: 40rem;
+        border-radius: 0.5rem;
+        border: $border;
+        padding: 2rem;
+        text-align: center;
+
+        h3 {
+            font-size: 2.2rem;
+            text-transform: uppercase;
+            color: $black;
+            margin-bottom: 0.7rem;
+        }
+
+        .inputBox {
+            margin: 1rem 0;
+            display: flex;
+            border-radius: 0.5rem;
+            background: $light-bg;
+            padding: 0.5rem 1rem;
+            align-items: center;
+            gap: 1rem;
+
+            span{
+                color: $light-color;
+                margin-left: 1rem;
+                font-size: 2rem;
+            }
+            input{
+                width: 100%;
+                padding: 1rem;
+                background: none;
+                font-size: 1.5rem;
+                color: $light-color;
+                text-transform: none;
+            }
+        }
+
+        .flex{
+            display: flex;
+            align-items: center;
+            gap: 0.5rem;
+            padding: 1rem 0;
+            margin-bottom: 1rem;
+            label{
+                font-size: 1.5rem;
+                cursor: pointer;
+                color: $light-color;
+            }
+            a{
+                font-size: 1.5rem;
+                color: $light-color;
+                margin-top: auto;
+                &:hover{
+                    color: $pink;
+                }
+            }
+        }
+
+        input[type="submit"]{
+            background: $black;
+            color: $white;
+
+            &:hover{
+                background: $pink;
+            }
+        }
+        .btn{
+            width: 100px;
+        }
+    }
+}
 
 
 
