--- a/style.css
+++ b/style.css
@@ -473,7 +473,8 @@ html {
   border-radius: 0.5rem;
   border: 0.2rem solid #333;
 }
-.contact .row form .box, .contact .row form textarea {
+.contact .row form .box,
+.contact .row form textarea {
   width: 100%;
   border-bottom: 0.2rem solid #333;
   margin-bottom: 1rem;
@@ -490,6 +491,85 @@ html {
   flex: 1 1 42rem;
   border-radius: 0.5rem;
   width: 100%;
+}
+
+.login-form form,
+.register-form form {
+  margin: 1rem auto;
+  max-width: 40rem;
+  border-radius: 0.5rem;
+  border: 0.2rem solid #333;
+  padding: 2rem;
+  text-align: center;
+}
+.login-form form h3,
+.register-form form h3 {
+  font-size: 2.2rem;
+  text-transform: uppercase;
+  color: #333;
+  margin-bottom: 0.7rem;
+}
+.login-form form .inputBox,
+.register-form form .inputBox {
+  margin: 1rem 0;
+  display: flex;
+  border-radius: 0.5rem;
+  background: #eee;
+  padding: 0.5rem 1rem;
+  align-items: center;
+  gap: 1rem;
+}
+.login-form form .inputBox span,
+.register-form form .inputBox span {
+  color: #666;
+  margin-left: 1rem;
+  font-size: 2rem;
+}
+.login-form form .inputBox input,
+.register-form form .inputBox input {
+  width: 100%;
+  padding: 1rem;
+  background: none;
+  font-size: 1.5rem;
+  color: #666;
+  text-transform: none;
+}
+.login-form form .flex,
+.register-form form .flex {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 1rem 0;
+  margin-bottom: 1rem;
+}
+.login-form form .flex label,
+.register-form form .flex label {
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: #666;
+}
+.login-form form .flex a,
+.register-form form .flex a {
+  font-size: 1.5rem;
+  color: #666;
+  margin-top: auto;
+}
+.login-form form .flex a:hover,
+.register-form form .flex a:hover {
+  color: #e84393;
+}
+.login-form form input[type=submit],
+.register-form form input[type=submit] {
+  background: #333;
+  color: #fff;
+}
+.login-form form input[type=submit]:hover,
+.register-form form input[type=submit]:hover {
+  background: #e84393;
+}
+.login-form form .btn,
+.register-form form .btn {
+  width: 100px;
 }
 
 .footer .box-container {
