--- a/style.scss
+++ b/style.scss
@@ -724,13 +724,41 @@ html {
                     }
 
                     input {
-                        width: 5rem;
+                        width: 8rem;
                         font-size: 1.5rem;
                         color: $light-color;
-                        padding: 1rem;
+                        padding: 0.5rem 1rem;
                         border-radius: 0.5rem;
+                        background: $light-bg;
                     }
                 }
+
+                .price {
+                    font-size: 2rem;
+                    color: $black;
+
+                    span {
+                        color: $light-color;
+                        font-size: 1.5rem;
+                        text-decoration: line-through;
+                    }
+                }
+            }
+        }
+    }
+
+    .cart-total {
+        padding: 2rem;
+        border-radius: 0.5rem;
+        border: $border;
+
+        h3 {
+            margin-bottom: 1rem;
+            font-size: 2rem;
+            color: $black;
+
+            span {
+                color: $pink;
             }
         }
     }
