--- a/style.css
+++ b/style.css
@@ -574,7 +574,7 @@ html {
 
 .shopping-cart .box-container {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(31rem, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(32rem, 1fr));
   gap: 1.5rem;
   margin-bottom: 2rem;
 }
@@ -747,6 +747,9 @@ html {
   }
   .home .slide .content h3 {
     font-size: 4rem;
+  }
+  .shopping-cart .box-container .box {
+    flex-flow: column;
   }
 }
 
